Refact: 소냐큐브에 의한 전체코드 리팩토링