@@ -195,7 +195,7 @@ public class BookServiceImpl implements BookService {
 
         List<Book> books = bookRepository.findAllById(bookIds);
 
-        return books.stream().map(BookOrderResponse::from).collect(Collectors.toList());
+        return books.stream().map(BookOrderResponse::from).toList();
     }
 
     /// 재고 감소
@@ -281,7 +281,7 @@ public class BookServiceImpl implements BookService {
                 .filter(bookMap::containsKey)
                 .map(bookMap::get)
                 .map(BookListResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
